--- a/content/About introduce.html
+++ b/content/About introduce.html
@@ -2,6 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -122,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='CMSiMDE.html'>CMSiMDE</a><ul class='dropdown'><li class='has-children'><a href='基本操作.html'>基本操作</a><ul class='dropdown'><li><a href='客製化.html'>客製化</a><li><a href='編輯網頁內容.html'>編輯網頁內容</a><li><a href='上傳與引用檔案.html'>上傳與引用檔案</a><li><a href='上傳與引用圖片.html'>上傳與引用圖片</a><li><a href='嵌入程式碼.html'>嵌入程式碼</a><li><a href='嵌入影片檔.html'>嵌入影片檔</a><li><a href='檢視 STL.html'>檢視 STL</a></li></ul><li><a href='Gitlab 同步.html'>Gitlab 同步</a><li><a href='Heroku 部署.html'>Heroku 部署</a><li><a href='Fossil SCM.html'>Fossil SCM</a></li></ul><li><a href='建立網頁.html'>建立網頁</a><li class='has-children'><a href='注意事項.html'>注意事項</a><ul class='dropdown'><li><a href='標題選擇.html'>標題選擇</a><li><a href='靜態網頁 404.html'>靜態網頁 404</a><li><a href='動態網站錯誤.html'>動態網站錯誤</a></li></ul><li class='has-children'><a href='延伸開發.html'>延伸開發</a><ul class='dropdown'><li class='has-children'><a href='已知問題.html'>已知問題</a><ul class='dropdown'><li><a href='IPv6.html'>IPv6</a><li><a href='MathJax.html'>MathJax</a><li><a href='html 分頁.html'>html 分頁</a><li><a href='template.html'>template</a></li>
+                     <li><a href='About introduce.html'>About introduce</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,10 +134,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">MathJax << <a href='MathJax.html'>Previous</a> <a href='template.html'>Next</a> >> template<br /><h1>html 分頁</h1>
-<p>分頁失敗時會意外抹除 config\content.htm 中的所有內容</p>
-<p>分頁失敗並不會提供 debug 建議</p>
-<br />MathJax << <a href='MathJax.html'>Previous</a> <a href='template.html'>Next</a> >> template</div>
+    <div id="tipue_search_content"> <br /><h1>About introduce</h1>
+<p>stage1-ag6</p>
+<p>stage2-ag6</p>
+<p>stage3-ag5</p>
+<p>組長 40823111 許耀中</p>
+<p>member </p>
+<p>40823139 王銘揖</p>
+<p></p><br /> </div>
         
     <!-- footer -->
       <div class="container">
