--- a/config/content.htm
+++ b/config/content.htm
@@ -1,8 +1,39 @@
-<h1>About introduce</h1>
-<p>stage1-ag6</p>
-<p>stage2-ag6</p>
-<p>stage3-ag5</p>
-<p>組長 40823111 許耀中</p>
-<p>member </p>
-<p>40823139 王銘揖</p>
+<h1>Stage3-ag5</h1>
 <p></p>
+<h2>stage1</h2>
+<h3>ag6</h3>
+<p><span>題目:套圈遊樂器</span></p>
+<h3>ag9</h3>
+<p>題目:自動折衣機</p>
+<h3>ag12</h3>
+<p>題目:<span>平面四桿機構</span></p>
+<h3>ag15</h3>
+<p>題目:水車</p>
+<h2>stage2</h2>
+<h3>ag3</h3>
+<p>專案主題: 自動砂帶機</p>
+<p>製作理念: 由於砂帶機還需要人工操作 砂帶滾動時有危險性 所以想增加夾具 讓砂帶機可以自動操作</p>
+<p>來避免手直接接觸 降低危險性 使工作環境更加安全</p>
+<h3>ag6</h3>
+<p><span>題目 : 1.棒球打擊模擬</span></p>
+<ol>
+<li>一個平台(棒球場) 球打出去後可以接球(防守者) 漏接的球可以自動流回輸送台，再次被送回來</li>
+<li>使用類似螺紋的概念把球輸送到想要的平台</li>
+<li>希望可以把球的軌跡沿著螺旋線上升</li>
+<li>做成一個循迴機構</li>
+</ol>
+<p>主要物件: 2.隻機械手臂(王銘楫和廖璟承) 平台和送球機構(許耀中和范維倫)</p>
+<h3>ag9</h3>
+<p>題目:旋轉木馬</p>
+<p>製作理念:心血來潮</p>
+<h2>stage3</h2>
+<h3>ag5</h3>
+<p>組員:</p>
+<p>40823111 許耀中</p>
+<p>40823115 黃歸吉</p>
+<p>40823120 范維倫</p>
+<p>40823124 廖璟程</p>
+<p>40823126 楊育翔</p>
+<p>40823128 曾鑵<span>斁</span></p>
+<p>40823140 林子恩</p>
+<p>題目:</p>
