--- a/content/ag3.html
+++ b/content/ag3.html
@@ -2,6 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -133,9 +134,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='stage1.html'>Next</a> >> stage1<br /><h1>Stage3-ag5</h1>
-<p></p>
-<br /> <a href='stage1.html'>Next</a> >> stage1</div>
+    <div id="tipue_search_content">stage2 << <a href='stage2.html'>Previous</a> <a href='ag6-2.html'>Next</a> >> ag6-2<br /><h1>ag3</h1>
+<p>專案主題: 自動砂帶機</p>
+<p>製作理念: 由於砂帶機還需要人工操作 砂帶滾動時有危險性 所以想增加夾具 讓砂帶機可以自動操作</p>
+<p>來避免手直接接觸 降低危險性 使工作環境更加安全</p>
+<br />stage2 << <a href='stage2.html'>Previous</a> <a href='ag6-2.html'>Next</a> >> ag6-2</div>
         
     <!-- footer -->
       <div class="container">
