--- a/content/ag6-2.html
+++ b/content/ag6-2.html
@@ -2,6 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -133,9 +134,16 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='stage1.html'>Next</a> >> stage1<br /><h1>Stage3-ag5</h1>
-<p></p>
-<br /> <a href='stage1.html'>Next</a> >> stage1</div>
+    <div id="tipue_search_content">ag3 << <a href='ag3.html'>Previous</a> <a href='ag9-2.html'>Next</a> >> ag9-2<br /><h1>ag6-2</h1>
+<p><span>題目 : 1.棒球打擊模擬</span></p>
+<ol>
+<li>一個平台(棒球場) 球打出去後可以接球(防守者) 漏接的球可以自動流回輸送台，再次被送回來</li>
+<li>使用類似螺紋的概念把球輸送到想要的平台</li>
+<li>希望可以把球的軌跡沿著螺旋線上升</li>
+<li>做成一個循迴機構</li>
+</ol>
+<p>主要物件: 2.隻機械手臂(王銘楫和廖璟承) 平台和送球機構(許耀中和范維倫)</p>
+<br />ag3 << <a href='ag3.html'>Previous</a> <a href='ag9-2.html'>Next</a> >> ag9-2</div>
         
     <!-- footer -->
       <div class="container">
