--- a/content/ag9-2.html
+++ b/content/ag9-2.html
@@ -2,6 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -133,9 +134,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='stage1.html'>Next</a> >> stage1<br /><h1>Stage3-ag5</h1>
-<p></p>
-<br /> <a href='stage1.html'>Next</a> >> stage1</div>
+    <div id="tipue_search_content">ag6-2 << <a href='ag6-2.html'>Previous</a> <a href='stage3.html'>Next</a> >> stage3<br /><h1>ag9-2</h1>
+<p>題目:旋轉木馬</p>
+<p>製作理念:心血來潮</p>
+<br />ag6-2 << <a href='ag6-2.html'>Previous</a> <a href='stage3.html'>Next</a> >> stage3</div>
         
     <!-- footer -->
       <div class="container">
