--- a/content/stage2.html
+++ b/content/stage2.html
@@ -2,6 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -133,9 +134,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='stage1.html'>Next</a> >> stage1<br /><h1>Stage3-ag5</h1>
-<p></p>
-<br /> <a href='stage1.html'>Next</a> >> stage1</div>
+    <div id="tipue_search_content">ag15 << <a href='ag15.html'>Previous</a> <a href='ag3.html'>Next</a> >> ag3<br /><h1>stage2</h1>
+<br />ag15 << <a href='ag15.html'>Previous</a> <a href='ag3.html'>Next</a> >> ag3</div>
         
     <!-- footer -->
       <div class="container">
