--- a/config/content.htm
+++ b/config/content.htm
@@ -1,4 +1,4 @@
-<h1>Stage3-ag5</h1>
+<h1>Stage1,2</h1>
 <p></p>
 <h2>stage1</h2>
 <h3>ag6</h3>
@@ -26,7 +26,7 @@
 <h3>ag9</h3>
 <p>題目:旋轉木馬</p>
 <p>製作理念:心血來潮</p>
-<h2>stage3</h2>
+<h1>stage3</h1>
 <h3>ag5</h3>
 <p>組員:</p>
 <p>40823111 許耀中</p>
