--- a/content/stage1.html
+++ b/content/stage1.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='Stage3-ag5.html'>Stage3-ag5</a><ul class='dropdown'><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='ag6-1.html'>ag6-1</a><li><a href='ag9-1.html'>ag9-1</a><li><a href='ag12.html'>ag12</a><li><a href='ag15.html'>ag15</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='ag3.html'>ag3</a><li><a href='ag6-2.html'>ag6-2</a><li><a href='ag9-2.html'>ag9-2</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li><a href='ag5.html'>ag5</a></li>
+                     <li class='has-children'><a href='Stage1,2.html'>Stage1,2</a><ul class='dropdown'><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='ag6-1.html'>ag6-1</a><li><a href='ag9-1.html'>ag9-1</a><li><a href='ag12.html'>ag12</a><li><a href='ag15.html'>ag15</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='ag3.html'>ag3</a><li><a href='ag6-2.html'>ag6-2</a><li><a href='ag9-2.html'>ag9-2</a></li></li></ul></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li><a href='ag5.html'>ag5</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,8 +134,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Stage3-ag5 << <a href='Stage3-ag5.html'>Previous</a> <a href='ag6-1.html'>Next</a> >> ag6-1<br /><h1>stage1</h1>
-<br />Stage3-ag5 << <a href='Stage3-ag5.html'>Previous</a> <a href='ag6-1.html'>Next</a> >> ag6-1</div>
+    <div id="tipue_search_content">Stage1,2 << <a href='Stage1,2.html'>Previous</a> <a href='ag6-1.html'>Next</a> >> ag6-1<br /><h1>stage1</h1>
+<br />Stage1,2 << <a href='Stage1,2.html'>Previous</a> <a href='ag6-1.html'>Next</a> >> ag6-1</div>
         
     <!-- footer -->
       <div class="container">
