--- a/config/content.htm
+++ b/config/content.htm
@@ -1,5 +1,4 @@
 <h1>Stage1,2</h1>
-<p></p>
 <h2>stage1</h2>
 <h3>ag6</h3>
 <p><span>題目:套圈遊樂器</span></p>
@@ -27,7 +26,7 @@
 <p>題目:旋轉木馬</p>
 <p>製作理念:心血來潮</p>
 <h1>stage3</h1>
-<h3>ag5</h3>
+<h2>ag5</h2>
 <p>組員:</p>
 <p>40823111 許耀中</p>
 <p>40823115 黃歸吉</p>
@@ -35,5 +34,11 @@
 <p>40823124 廖璟程</p>
 <p>40823126 楊育翔</p>
 <p>40823128 曾鑵<span>斁</span></p>
+<p><span>40823139 王銘楫</span></p>
 <p>40823140 林子恩</p>
 <p>題目:</p>
+<h1>week</h1>
+<h2>w10</h2>
+<h2>w11</h2>
+<h2>w12</h2>
+<h2>w13</h2>
