--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -9,8 +9,6 @@
 <p><span>40823139 王銘楫</span></p>
 <p>40823140 林子恩</p>
 <p>題目:</p>
-
-
 <h1>Stage1,2</h1>
 <h2>子恩組</h2>
 <h3>stage1</h3>
@@ -39,7 +37,7 @@
 <h4>ag9</h4>
 <p>題目:旋轉木馬</p>
 <p>製作理念:心血來潮</p>
-
+<h2>耀中組</h2>
 <h1>week</h1>
 <h2>w10</h2>
 <h2>w11</h2>
