--- a/content/耀中組.html
+++ b/content/耀中組.html
@@ -2,7 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,8 +134,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Introduction << <a href='Introduction.html'>Previous</a> <a href='子恩組.html'>Next</a> >> 子恩組<br /><h1>Stage1,2</h1>
-<br />Introduction << <a href='Introduction.html'>Previous</a> <a href='子恩組.html'>Next</a> >> 子恩組</div>
+    <div id="tipue_search_content">stage2 << <a href='stage2.html'>Previous</a> <a href='week.html'>Next</a> >> week<br /><h1>耀中組</h1>
+<p>stage1</p>
+<p></p>
+<br />stage2 << <a href='stage2.html'>Previous</a> <a href='week.html'>Next</a> >> week</div>
         
     <!-- footer -->
       <div class="container">
