--- a/content/耀中組.html
+++ b/content/耀中組.html
@@ -136,6 +136,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">stage2 << <a href='stage2.html'>Previous</a> <a href='week.html'>Next</a> >> week<br /><h1>耀中組</h1>
 <p>stage1</p>
+<p>stage2</p>
 <p></p>
 <br />stage2 << <a href='stage2.html'>Previous</a> <a href='week.html'>Next</a> >> week</div>
         
