--- a/content/stage2.html
+++ b/content/stage2.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='Stage1,2.html'>Stage1,2</a><ul class='dropdown'><li class='has-children'><a href='子恩組.html'>子恩組</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='耀中組.html'>耀中組</a></li></ul><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='Stage1,2.html'>Stage1,2</a><ul class='dropdown'><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage2.html'>stage2</a></li></li></ul></ul><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,7 +134,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage1 << <a href='stage1.html'>Previous</a> <a href='耀中組.html'>Next</a> >> 耀中組<br /><h1>stage2</h1>
+    <div id="tipue_search_content">stage1 << <a href='stage1.html'>Previous</a> <a href='week.html'>Next</a> >> week<br /><h1>stage2</h1>
 <h4>ag3</h4>
 <p>專案主題: 自動砂帶機</p>
 <p>製作理念: 由於砂帶機還需要人工操作 砂帶滾動時有危險性 所以想增加夾具 讓砂帶機可以自動操作</p>
@@ -151,7 +151,7 @@ img.add_border {
 <h4>ag9</h4>
 <p>題目:旋轉木馬</p>
 <p>製作理念:心血來潮</p>
-<br />stage1 << <a href='stage1.html'>Previous</a> <a href='耀中組.html'>Next</a> >> 耀中組</div>
+<br />stage1 << <a href='stage1.html'>Previous</a> <a href='week.html'>Next</a> >> week</div>
         
     <!-- footer -->
       <div class="container">
