--- a/content/stage1.html
+++ b/content/stage1.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='Stage1,2.html'>Stage1,2</a><ul class='dropdown'><li class='has-children'><a href='子恩組.html'>子恩組</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='耀中組.html'>耀中組</a></li></ul><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='Stage1,2.html'>Stage1,2</a><ul class='dropdown'><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage2.html'>stage2</a></li></li></ul></ul><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,7 +134,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">子恩組 << <a href='子恩組.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2<br /><h1>stage1</h1>
+    <div id="tipue_search_content">Stage1,2 << <a href='Stage1,2.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2<br /><h1>stage1</h1>
 <h4>ag6</h4>
 <p><span>題目:套圈遊樂器</span></p>
 <h4>ag9</h4>
@@ -143,7 +143,7 @@ img.add_border {
 <p>題目:<span>平面四桿機構</span></p>
 <h4>ag15</h4>
 <p>題目:水車</p>
-<br />子恩組 << <a href='子恩組.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2</div>
+<br />Stage1,2 << <a href='Stage1,2.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2</div>
         
     <!-- footer -->
       <div class="container">
