--- a/config/content.htm
+++ b/config/content.htm
@@ -38,6 +38,23 @@
 <p>製作理念:心血來潮</p>
 <h1>week</h1>
 <h2>w10</h2>
+<h3>task1</h3>
+<p><span>讀取 stage3_2a.txt, 建立 Stage3 的分組倉儲, 分組網頁, 以及各組員倉儲及網頁連結.</span></p>
+<p><span></span></p>
+<p></p>
+<h3>task2</h3>
+<p><span>請各組員分別將個人在 stage1 與 stage2 所完成的 coppeliasim 場景, 採 Python remote API 進行操控, 並將過程拍成影片後, 放在個人與分組網站上</span></p>
+<p><span>使用CoppliaSim 更新版:<a href="http://a.kmol.info:88/CoppeliaSimEdu_4.2.0.7z">4.2.0 版</a></span></p>
 <h2>w11</h2>
+<h3>task3</h3>
+<p><span>每週各組按照組員順序, 於每堂課程時段, 輪流由 2-3 名學員啟動 OBS + Youtube 直播</span></p>
+<p><span>第一次 直播抽到組員 40823111 40823120</span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/BaqrJgY4yKA" title="YouTube video player" width="560"></iframe></p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/pPfVa89UqMA" title="YouTube video player" width="560"></iframe></p>
+<p></p>
+<p></p>
 <h2>w12</h2>
 <h2>w13</h2>
+<p></p>
+<p></p>
