--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -10,7 +10,6 @@
 <p>40823140 林子恩</p>
 <p>題目:</p>
 <h1>Stage1,2</h1>
-<h2>子恩組</h2>
 <h3>stage1</h3>
 <h4>ag6</h4>
 <p><span>題目:套圈遊樂器</span></p>
@@ -37,12 +36,22 @@
 <h4>ag9</h4>
 <p>題目:旋轉木馬</p>
 <p>製作理念:心血來潮</p>
-<h2>耀中組</h2>
-<p>stage1</p>
-<p>stage2</p>
-<p></p>
 <h1>week</h1>
 <h2>w10</h2>
+<h3>task1</h3>
+<p><span>讀取 stage3_2a.txt, 建立 Stage3 的分組倉儲, 分組網頁, 以及各組員倉儲及網頁連結.</span></p>
+<p><span></span></p>
+<p></p>
+<h3>task2</h3>
+<p><span>請各組員分別將個人在 stage1 與 stage2 所完成的 coppeliasim 場景, 採 Python remote API 進行操控, 並將過程拍成影片後, 放在個人與分組網站上</span></p>
+<p><span>使用CoppliaSim 更新版:<a href="http://a.kmol.info:88/CoppeliaSimEdu_4.2.0.7z">4.2.0 版</a></span></p>
+<p><span></span></p>
 <h2>w11</h2>
+<h3>task3</h3>
+<p><span>每週各組按照組員順序, 於每堂課程時段, 輪流由 2-3 名學員啟動 OBS + Youtube 直播</span></p>
+<p><span></span></p>
+<p></p>
+<p></p>
+<p></p>
 <h2>w12</h2>
 <h2>w13</h2>
