--- a/content/w16.html
+++ b/content/w16.html
@@ -2,6 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -133,18 +134,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Stage1,2.html'>Next</a> >> Stage1,2<br /><h1>Introduction</h1>
-<p>組長:<span>40823111 許耀中</span></p>
-<p>組員:</p>
-<p>40823115 黃歸吉</p>
-<p>40823120 范維倫</p>
-<p>40823124 廖璟程</p>
-<p>40823126 楊育翔</p>
-<p>40823128 曾鑵<span>斁</span></p>
-<p><span>40823139 王銘楫</span></p>
-<p>40823140 林子恩</p>
-<p>題目:</p>
-<br /> <a href='Stage1,2.html'>Next</a> >> Stage1,2</div>
+    <div id="tipue_search_content">w15 << <a href='w15.html'>Previous</a> <br /><h1>w16</h1>
+<p></p>
+<p></p><br />w15 << <a href='w15.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
