--- a/config/content.htm
+++ b/config/content.htm
@@ -41,10 +41,33 @@
 <h3>task1</h3>
 <p><span>讀取 stage3_2a.txt, 建立 Stage3 的分組倉儲, 分組網頁, 以及各組員倉儲及網頁連結.</span></p>
 <p><span></span></p>
-<p></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">with open("stage3_2a.txt") as gp:
+    # readlines will read into the whole line and put into list format
+    # has \n at the end of each line
+    data = gp.readlines()
+    data = [d.replace('4823122','40823122') for d in data]
+    data = [v.replace('\t\t\t\t','') for v in data]
+#print(len(data))
+for p in range(len(data)):
+    group = data[p].rstrip("\n").split("\t")
+    print('&lt;p&gt;'+group[0]+' | &lt;a href="https://'+group[1]+'.github.io/stage3-ag'+group[0][9]+'"&gt;網站&lt;/a&gt;  &lt;a href="https://github.com/'+group[2]+'/stage3-ag'+group[0][9]+'"&gt;倉儲&lt;/a&gt;&lt;/p&gt;')
+    for  q in range(2,18,2):
+        try:
+              print('&lt;p&gt;'+group[q]+' | Website:'+'&lt;a href="https://'+group[q]+'.github.io/cd2021'+'"&gt;'+group[q]+'&lt;/a&gt;'+' | Repository:'+'&lt;a href="https://github.com/'+group[q]+'/cd2021'+'"&gt;'+group[q]+'&lt;/a&gt;'+' | Group Website:'+'&lt;a href="https://'+group[q]+'.github.io/stage3-ag'+group[0][9]+'"&gt;'+group[q]+'&lt;/a&gt;&lt;/p&gt;' )
+        except:
+            continue
+            
+
+</pre>
+<p><br/><span></span></p>
 <h3>task2</h3>
 <p><span>請各組員分別將個人在 stage1 與 stage2 所完成的 coppeliasim 場景, 採 Python remote API 進行操控, 並將過程拍成影片後, 放在個人與分組網站上</span></p>
 <p><span>使用CoppliaSim 更新版:<a href="http://a.kmol.info:88/CoppeliaSimEdu_4.2.0.7z">4.2.0 版</a></span></p>
+<p><span></span></p>
+<p><span></span></p>
+<p><span></span></p>
+<p><span></span></p>
+<p><span></span></p>
 <h2>w11</h2>
 <h3>task3</h3>
 <p><span>每週各組按照組員順序, 於每堂課程時段, 輪流由 2-3 名學員啟動 OBS + Youtube 直播</span></p>
@@ -52,9 +75,10 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/BaqrJgY4yKA" title="YouTube video player" width="560"></iframe></p>
 <p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/pPfVa89UqMA" title="YouTube video player" width="560"></iframe></p>
-<p></p>
-<p></p>
 <h2>w12</h2>
 <h2>w13</h2>
+<h2>w14</h2>
+<h2>w15</h2>
+<h2>w16</h2>
 <p></p>
 <p></p>
