--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -116,7 +116,8 @@ for p in range(len(data)):
 <p><span>使用CoppliaSim 更新版:<a href="http://a.kmol.info:88/CoppeliaSimEdu_4.2.0.7z">4.2.0 版</a></span></p>
 <p><br/><span></span></p>
 <p>1. 第一組模擬</p>
-<p>step1模擬 <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/UM7mLBlScJs" title="YouTube video player" width="560"></iframe> step2模擬 <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/vVW_nYi4gXU" title="YouTube video player" width="560"></iframe></p><h2>w11</h2>
+<p>step1模擬 <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/UM7mLBlScJs" title="YouTube video player" width="560"></iframe> step2模擬 <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/vVW_nYi4gXU" title="YouTube video player" width="560"></iframe></p>
+<h2>w11</h2>
 <h3>task3</h3>
 <p><span>每週各組按照組員順序, 於每堂課程時段, 輪流由 2-3 名學員啟動 OBS + Youtube 直播</span></p>
 <p><span>第一次 直播抽到組員 40823111 40823120</span></p>
@@ -125,12 +126,25 @@ for p in range(len(data)):
 <p>2.介紹reveal的創見與撰寫網誌內容</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/pPfVa89UqMA" title="YouTube video player" width="560"></iframe></p>
 <h2>w12</h2>
-<p><span>第二次 直播抽到組員 40823111 40823120</span></p>
+<p><span>第二次 直播抽到組員 40823115 40823126</span></p>
+<p><span>1. 40823115  </span>介紹pelican和reveal</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/UjbTUvps2ws" title="YouTube video player" width="560"></iframe></p>
 <p><span></span></p>
-<p></p>
+<p>2.40823126 介紹 soildworks繪圖</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/HXmGJbcdTNI" title="YouTube video player" width="560"></iframe></p>
 <h2>w13</h2>
+<h4>RoboDK 機械手臂 Pick and Place Python API 程式:</h4>
+<p><a href="https://drive.google.com/file/d/13dzUp_j6U2PBHY1Gzl_1tzxSg7ULT8qi/view?usp=sharing">下載 RoboDK 5.2.2 可攜程式</a><span><span> </span>(</span><a href="https://drive.google.com/file/d/1IhQK5TRQTBBegG2LizypdE-i39n_T7fO/view?usp=sharing">5.2.3</a><span>) </span></p>
+<p><span>完整的 </span><a href="https://drive.google.com/file/d/1XoB3F5cPK8R4Y8AIWL5pKR5TQjPW8TRv/view?usp=sharing">Pick and Place 檔案下載</a></p>
+<p><a href="https://drive.google.com/file/d/1WRX6i6cA_f8ER6kN8yNwt1sdZTLMhl4J/view?usp=sharing">下載 CoppeliaSim 4.1.0 可攜程式</a><span><span> </span>(使用舊版的) </span></p>
+<p><span></span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/sQ6QacdSuYY" title="YouTube video player" width="560"></iframe></p>
 <h2>w14</h2>
+<p>github可以備份資料了，想使用gitlab  <a href="https://40823111.github.io/cd2021/content/week14.html">創建請看這裡</a></p>
+<p><img alt="" height="502" src="/images/20120986nOfEu5a3rp.jpg" width="553"/></p>
 <h2>w15</h2>
+<p>自行meeting 一起做機械手臂及討論</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/6nvUldjcJF0" title="YouTube video player" width="560"></iframe></p>
 <h2>w16</h2>
-<p></p>
+<p><a href="https://40823111.github.io/cd2021/content/w16.html">期末考試了</a></p>
 <p></p>
