--- a/content/w16.html
+++ b/content/w16.html
@@ -135,7 +135,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w15 << <a href='w15.html'>Previous</a> <br /><h1>w16</h1>
-<p></p>
+<p><a href="https://40823111.github.io/cd2021/content/w16.html">期末考試了</a></p>
 <p></p><br />w15 << <a href='w15.html'>Previous</a> </div>
         
     <!-- footer -->
