--- a/content/w12.html
+++ b/content/w12.html
@@ -135,9 +135,12 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">task3 << <a href='task3.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>w12</h1>
-<p><span>第二次 直播抽到組員 40823111 40823120</span></p>
+<p><span>第二次 直播抽到組員 40823115 40823126</span></p>
+<p><span>1. 40823115  </span>介紹pelican和reveal</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/UjbTUvps2ws" title="YouTube video player" width="560"></iframe></p>
 <p><span></span></p>
-<p></p>
+<p>2.40823126 介紹 soildworks繪圖</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/HXmGJbcdTNI" title="YouTube video player" width="560"></iframe></p>
 <br />task3 << <a href='task3.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
         
     <!-- footer -->
