--- a/content/w14.html
+++ b/content/w14.html
@@ -135,6 +135,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='w15.html'>Next</a> >> w15<br /><h1>w14</h1>
+<p>github可以備份資料了，想使用gitlab  <a href="https://40823111.github.io/cd2021/content/week14.html">創建請看這裡</a></p>
+<p><img alt="" height="502" src="./../images/20120986nOfEu5a3rp.jpg" width="553"/></p>
 <br />w13 << <a href='w13.html'>Previous</a> <a href='w15.html'>Next</a> >> w15</div>
         
     <!-- footer -->
