--- a/content/w15.html
+++ b/content/w15.html
@@ -135,6 +135,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='w16.html'>Next</a> >> w16<br /><h1>w15</h1>
+<p>自行meeting 一起做機械手臂及討論</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/6nvUldjcJF0" title="YouTube video player" width="560"></iframe></p>
 <br />w14 << <a href='w14.html'>Previous</a> <a href='w16.html'>Next</a> >> w16</div>
         
     <!-- footer -->
