--- a/content/Introduction.html
+++ b/content/Introduction.html
@@ -135,7 +135,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='Stage1,2.html'>Next</a> >> Stage1,2<br /><h1>Introduction</h1>
-<p>組長:<span>40823111 許耀中</span></p>
+<p>組長:<span>40823111 許耀中0</span></p>
 <p>組員:</p>
 <p>40823115 黃歸吉</p>
 <p>40823120 范維倫</p>
