--- a/content/task2.html
+++ b/content/task2.html
@@ -192,7 +192,8 @@ group 5:8
 group 6:8
 40823110
 40823153
----------------------</pre><br />task1 << <a href='task1.html'>Previous</a> <a href='task3-1.html'>Next</a> >> task3-1</div>
+---------------------</pre>
+<br />task1 << <a href='task1.html'>Previous</a> <a href='task3-1.html'>Next</a> >> task3-1</div>
         
     <!-- footer -->
       <div class="container">
