--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,5 +1,5 @@
 <h1>Introduction</h1>
-<p>組長:<span>40823111 許耀中</span></p>
+<p>組長:<span>40823111 許耀中0</span></p>
 <p>組員:</p>
 <p>40823115 黃歸吉</p>
 <p>40823120 范維倫</p>
@@ -168,13 +168,18 @@ group 5:8
 group 6:8
 40823110
 40823153
----------------------</pre><h3>task3</h3>
+---------------------</pre>
+<h3>task3</h3>
 <p><span>請各組員分別將個人在 stage1 與 stage2 所完成的 coppeliasim 場景, 採 Python remote API 進行操控, 並將過程拍成影片後, 放在個人與分組網站上</span></p>
 <p><span>使用CoppliaSim 更新版:<a href="http://a.kmol.info:88/CoppeliaSimEdu_4.2.0.7z">4.2.0 版</a></span></p>
 <p><br/><span></span></p>
 <p>1. 第一組模擬</p>
-<p>step1模擬 <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/UM7mLBlScJs" title="YouTube video player" width="560"></iframe> step2模擬 <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/vVW_nYi4gXU" title="YouTube video player" width="560"></iframe></p><h2>w11</h2>
-<h3>task3</h3>
+<p>step1模擬 <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/UM7mLBlScJs" title="YouTube video player" width="560"></iframe></p>
+<p>step2模擬</p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/vVW_nYi4gXU" title="YouTube video player" width="560"></iframe></p>
+<h2>w11</h2>
+<h3>task3-1</h3>
 <p><span>每週各組按照組員順序, 於每堂課程時段, 輪流由 2-3 名學員啟動 OBS + Youtube 直播</span></p>
 <p><span>第一次 直播抽到組員 40823111 40823120</span></p>
 <p><span>1.介紹CoppliaSim 的使用方法</span></p>
@@ -203,6 +208,13 @@ group 6:8
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/6nvUldjcJF0" title="YouTube video player" width="560"></iframe></p>
 <h2>w16</h2>
 <p><a href="https://40823111.github.io/cd2021/content/w16.html">期末考試了</a></p>
+<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
+<h2>w18</h2>
+<p>最後結論</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/utQbjYkU7lA" title="YouTube video player" width="560"></iframe></p>
+<h1>FINAL</h1>
+<p></p>
+<p>=======</p>
 <p>part2 測試轉動 -40823124</p>
 <p><img caption="false" height="508" src="/images/w16_1.gif" width="1000"/></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">-- just test joints turning by 40823124
@@ -315,3 +327,4 @@ end
 <p>part4 lua自動執行 -40823124</p>
 <p><img caption="false" height="508" src="/images/w16_4.gif" width="1000"/></p>
 <script src="https://gist.github.com/40823124/de555eda2fe5d61639c6c76c26c16007.js"></script>
+<p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; ba3417913a9ac1e0268b21e7fe352c217a93570a</p>
