--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -214,8 +214,8 @@ group 6:8
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/utQbjYkU7lA" title="YouTube video player" width="560"></iframe></p>
 <h1>FINAL</h1>
 <p></p>
-<p>=======</p>
-<p>part2 測試轉動 -40823124</p>
+<h2>40823124</h2>
+<p>part2 測試轉動 </p>
 <p><img caption="false" height="508" src="/images/w16_1.gif" width="1000"/></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">-- just test joints turning by 40823124
 function moving1()
@@ -328,3 +328,15 @@ end
 <p><img caption="false" height="508" src="/images/w16_4.gif" width="1000"/></p>
 <script src="https://gist.github.com/40823124/de555eda2fe5d61639c6c76c26c16007.js"></script>
 <p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; ba3417913a9ac1e0268b21e7fe352c217a93570a</p>
+<p></p>
+<h2>40823128</h2>
+<p>Stage2 ag3我們是嘗試做自動砂帶機 ，由於我們一開始使用虎鉗來做夾持，可是沒辦法達成我們要的自動進給 coppeliasim 無法模擬 要改成使用機械手臂來做夾持 ，才能讓需要做表面處理的工件自動進給 達成我們要的全自動砂帶機。</p>
+<p></p>
+<p><img alt="" height="311" src="/images/40823128.jpg" width="580"/></p>
+<p></p>
+<p><img alt="" height="305" src="/images/40823128-1.jpg" width="568"/></p>
+<p></p>
+<p><img alt="" height="302" src="/images/40823128-2.jpg" width="561"/></p>
+<p></p>
+<p></p>
+<p><span></span></p>
