--- a/content/40823128.html
+++ b/content/40823128.html
@@ -134,14 +134,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">task3-1 << <a href='task3-1.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>w12</h1>
-<p><span>第二次 直播抽到組員 40823115 40823126</span></p>
-<p><span>1. 40823115  </span>介紹pelican和reveal</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/UjbTUvps2ws" title="YouTube video player" width="560"></iframe></p>
-<p><span></span></p>
-<p>2.40823126 介紹 soildworks繪圖</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/HXmGJbcdTNI" title="YouTube video player" width="560"></iframe></p>
-<br />task3-1 << <a href='task3-1.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
+    <div id="tipue_search_content">40823124 << <a href='40823124.html'>Previous</a> <a href='40823120.html'>Next</a> >> 40823120<br /><h1>40823128</h1>
+<p>Stage2 ag3我們是嘗試做自動砂帶機 ，由於我們一開始使用虎鉗來做夾持，可是沒辦法達成我們要的自動進給 coppeliasim 無法模擬 要改成使用機械手臂來做夾持 ，才能讓需要做表面處理的工件自動進給 達成我們要的全自動砂帶機。</p>
+<p></p>
+<p><img alt="" height="311" src="./../images/40823128.jpg" width="580"/></p>
+<p></p>
+<p><img alt="" height="305" src="./../images/40823128-1.jpg" width="568"/></p>
+<p></p>
+<p><img alt="" height="302" src="./../images/40823128-2.jpg" width="561"/></p>
+<br />40823124 << <a href='40823124.html'>Previous</a> <a href='40823120.html'>Next</a> >> 40823120</div>
         
     <!-- footer -->
       <div class="container">
