--- a/config/content.htm
+++ b/config/content.htm
@@ -214,8 +214,8 @@ group 6:8
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/utQbjYkU7lA" title="YouTube video player" width="560"></iframe></p>
 <h1>FINAL</h1>
 <p></p>
-<p>=======</p>
-<p>part2 測試轉動 -40823124</p>
+<h2>40823124</h2>
+<p>part2 測試轉動 </p>
 <p><img caption="false" height="508" src="/images/w16_1.gif" width="1000"/></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">-- just test joints turning by 40823124
 function moving1()
@@ -328,3 +328,16 @@ end
 <p><img caption="false" height="508" src="/images/w16_4.gif" width="1000"/></p>
 <script src="https://gist.github.com/40823124/de555eda2fe5d61639c6c76c26c16007.js"></script>
 <p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; ba3417913a9ac1e0268b21e7fe352c217a93570a</p>
+<p></p>
+<h2>40823128</h2>
+<p>Stage2 ag3我們是嘗試做自動砂帶機 ，由於我們一開始使用虎鉗來做夾持，可是沒辦法達成我們要的自動進給 coppeliasim 無法模擬 要改成使用機械手臂來做夾持 ，才能讓需要做表面處理的工件自動進給 達成我們要的全自動砂帶機。</p>
+<p></p>
+<p><img alt="" height="311" src="/images/40823128.jpg" width="580"/></p>
+<p></p>
+<p><img alt="" height="305" src="/images/40823128-1.jpg" width="568"/></p>
+<p></p>
+<p><img alt="" height="302" src="/images/40823128-2.jpg" width="561"/></p>
+<h2>40823120</h2>
+<p>40823120 小組貢獻<br/>在這學期主要負責的是倉儲的管理推送，設計產品和程式。<br/>stage1因為是兩個人分組所以分組很明確，我負責畫圖和管理網站以及部分程式。<br/>stage2是四個人一組分工得更為明確我個人負責模擬與產品設計，另一組負責程式設計。<br/>stage3是沿用我們stage2所設計的機構加以改善本來是打擊球用手套去接，後來覺得過度理想化所以想用固定一軸的方式使他每次的飛行都一樣。</p>
+<p>心得:<br/>Week16的作業對我自己來說真的很難，我比較擅長的是偏向畫圖和產品模擬所以在第一部分onshape那操作得很順手<br/>而到第二階段以後卡了很久，與小組的組員開metting後和參考了別人的影片才把第二階段的程式看懂，第三階段的吸盤一開始看不太懂如何操作後來發現他需要打開第二個節點那的程式，逆向那很複雜，一開始也不懂逆向是什麼意思，後來查完資料才知道，本來是我們要主動地去操作，需要把它變成自己去捕捉，API的部分丟小白框的時候他一start就馬上exit後來發現我少了keyboard所以我需要到小黑框裡輸入pip install keyboard接著去修改小白框裡的IP位址然後就可以使用API了。</p>
+<p><span></span></p>
