--- a/content/40823120.html
+++ b/content/40823120.html
@@ -134,14 +134,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">task3-1 << <a href='task3-1.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>w12</h1>
-<p><span>第二次 直播抽到組員 40823115 40823126</span></p>
-<p><span>1. 40823115  </span>介紹pelican和reveal</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/UjbTUvps2ws" title="YouTube video player" width="560"></iframe></p>
-<p><span></span></p>
-<p>2.40823126 介紹 soildworks繪圖</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/HXmGJbcdTNI" title="YouTube video player" width="560"></iframe></p>
-<br />task3-1 << <a href='task3-1.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
+    <div id="tipue_search_content">40823128 << <a href='40823128.html'>Previous</a> <br /><h1>40823120</h1>
+<p>40823120 小組貢獻<br/>在這學期主要負責的是倉儲的管理推送，設計產品和程式。<br/>stage1因為是兩個人分組所以分組很明確，我負責畫圖和管理網站以及部分程式。<br/>stage2是四個人一組分工得更為明確我個人負責模擬與產品設計，另一組負責程式設計。<br/>stage3是沿用我們stage2所設計的機構加以改善本來是打擊球用手套去接，後來覺得過度理想化所以想用固定一軸的方式使他每次的飛行都一樣。</p>
+<p>心得:<br/>Week16的作業對我自己來說真的很難，我比較擅長的是偏向畫圖和產品模擬所以在第一部分onshape那操作得很順手<br/>而到第二階段以後卡了很久，與小組的組員開metting後和參考了別人的影片才把第二階段的程式看懂，第三階段的吸盤一開始看不太懂如何操作後來發現他需要打開第二個節點那的程式，逆向那很複雜，一開始也不懂逆向是什麼意思，後來查完資料才知道，本來是我們要主動地去操作，需要把它變成自己去捕捉，API的部分丟小白框的時候他一start就馬上exit後來發現我少了keyboard所以我需要到小黑框裡輸入pip install keyboard接著去修改小白框裡的IP位址然後就可以使用API了。</p>
+<p><span></span></p><br />40823128 << <a href='40823128.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
