--- a/content/FINAL.html
+++ b/content/FINAL.html
@@ -2,7 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,14 +134,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">task3-1 << <a href='task3-1.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>w12</h1>
-<p><span>第二次 直播抽到組員 40823115 40823126</span></p>
-<p><span>1. 40823115  </span>介紹pelican和reveal</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/UjbTUvps2ws" title="YouTube video player" width="560"></iframe></p>
-<p><span></span></p>
-<p>2.40823126 介紹 soildworks繪圖</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/HXmGJbcdTNI" title="YouTube video player" width="560"></iframe></p>
-<br />task3-1 << <a href='task3-1.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
+    <div id="tipue_search_content">w18 << <a href='w18.html'>Previous</a> <a href='40823124.html'>Next</a> >> 40823124<br /><h1>FINAL</h1>
+<p></p>
+<br />w18 << <a href='w18.html'>Previous</a> <a href='40823124.html'>Next</a> >> 40823124</div>
         
     <!-- footer -->
       <div class="container">
