--- a/content/task2.html
+++ b/content/task2.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='Stage1,2.html'>Stage1,2</a><ul class='dropdown'><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage2.html'>stage2</a></li></li></ul></ul><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a><li><a href='task3-1.html'>task3-1</a></li></ul><li class='has-children'><a href='w11.html'>w11</a><ul class='dropdown'><li><a href='task3-2.html'>task3-2</a></li></ul><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a><li><a href='w16.html'>w16</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='Stage1,2.html'>Stage1,2</a><ul class='dropdown'><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage2.html'>stage2</a></li></li></ul></ul><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a><li><a href='task3.html'>task3</a></li></ul><li class='has-children'><a href='w11.html'>w11</a><ul class='dropdown'><li><a href='task3-1.html'>task3-1</a></li></ul><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a><li><a href='w16.html'>w16</a><li><a href='w18.html'>w18</a></li></ul><li class='has-children'><a href='FINAL.html'>FINAL</a><ul class='dropdown'><li><a href='40823124.html'>40823124</a><li><a href='40823128.html'>40823128</a><li><a href='40823120.html'>40823120</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,7 +134,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">task1 << <a href='task1.html'>Previous</a> <a href='task3-1.html'>Next</a> >> task3-1<br /><h1>task2</h1>
+    <div id="tipue_search_content">task1 << <a href='task1.html'>Previous</a> <a href='task3.html'>Next</a> >> task3<br /><h1>task2</h1>
 <p>隨機抽取各組別兩學號</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">#by 40823124
 import random
@@ -193,7 +193,7 @@ group 6:8
 40823110
 40823153
 ---------------------</pre>
-<br />task1 << <a href='task1.html'>Previous</a> <a href='task3-1.html'>Next</a> >> task3-1</div>
+<br />task1 << <a href='task1.html'>Previous</a> <a href='task3.html'>Next</a> >> task3</div>
         
     <!-- footer -->
       <div class="container">
