--- a/content/w18.html
+++ b/content/w18.html
@@ -134,14 +134,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">task3-1 << <a href='task3-1.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>w12</h1>
-<p><span>第二次 直播抽到組員 40823115 40823126</span></p>
-<p><span>1. 40823115  </span>介紹pelican和reveal</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/UjbTUvps2ws" title="YouTube video player" width="560"></iframe></p>
-<p><span></span></p>
-<p>2.40823126 介紹 soildworks繪圖</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/HXmGJbcdTNI" title="YouTube video player" width="560"></iframe></p>
-<br />task3-1 << <a href='task3-1.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
+    <div id="tipue_search_content">w16 << <a href='w16.html'>Previous</a> <a href='FINAL.html'>Next</a> >> FINAL<br /><h1>w18</h1>
+<p>最後結論</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/utQbjYkU7lA" title="YouTube video player" width="560"></iframe></p>
+<br />w16 << <a href='w16.html'>Previous</a> <a href='FINAL.html'>Next</a> >> FINAL</div>
         
     <!-- footer -->
       <div class="container">
