--- a/config/content.htm
+++ b/config/content.htm
@@ -340,7 +340,7 @@ end
 <h2>40823120</h2>
 <p>40823120 小組貢獻<br/>在這學期主要負責的是倉儲的管理推送，設計產品和程式。<br/>stage1因為是兩個人分組所以分組很明確，我負責畫圖和管理網站以及部分程式。<br/>stage2是四個人一組分工得更為明確我個人負責模擬與產品設計，另一組負責程式設計。<br/>stage3是沿用我們stage2所設計的機構加以改善本來是打擊球用手套去接，後來覺得過度理想化所以想用固定一軸的方式使他每次的飛行都一樣。</p>
 <p>心得:<br/>Week16的作業對我自己來說真的很難，我比較擅長的是偏向畫圖和產品模擬所以在第一部分onshape那操作得很順手<br/>而到第二階段以後卡了很久，與小組的組員開metting後和參考了別人的影片才把第二階段的程式看懂，第三階段的吸盤一開始看不太懂如何操作後來發現他需要打開第二個節點那的程式，逆向那很複雜，一開始也不懂逆向是什麼意思，後來查完資料才知道，本來是我們要主動地去操作，需要把它變成自己去捕捉，API的部分丟小白框的時候他一start就馬上exit後來發現我少了keyboard所以我需要到小黑框裡輸入pip install keyboard接著去修改小白框裡的IP位址然後就可以使用API了。</p>
-<<<<<<< HEAD
+&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
 <p></p>
 <h2>40823115</h2>
 <p>stage1我們自做自動折一機，我負責coppeliasim模擬因為是第一次使用所以完全不會我就從網路上看影片學習。看了這影片後我就完成了stage1的大部分模擬</p>
@@ -367,4 +367,4 @@ end
 <p>這次的期末考又學到了很多技術，一開始是Onshape畫圖，接下來是CoppeliaSim的很多技巧，</p>
 <p>再來是學習怎麼寫程式，寫程式時要把自己當作機器人，一步驟一步驟寫，接直到成功，再來要</p>
 <p>謝謝組員，在技術上有問題時都能馬上支援，一起討論，並解決問題的時候很棒。</p>
->>>>>>> 1d16274daafc2e4d48b558bf785b9c46f995c88c
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; 1d16274daafc2e4d48b558bf785b9c46f995c88c
