--- a/content/40823140.html
+++ b/content/40823140.html
@@ -150,8 +150,7 @@ img.add_border {
 <p>這次的期末考又學到了很多技術，一開始是Onshape畫圖，接下來是CoppeliaSim的很多技巧，</p>
 <p>再來是學習怎麼寫程式，寫程式時要把自己當作機器人，一步驟一步驟寫，接直到成功，再來要</p>
 <p>謝謝組員，在技術上有問題時都能馬上支援，一起討論，並解決問題的時候很棒。</p>
-&gt;&gt;&gt;&gt;&gt;&gt;&gt; 1d16274daafc2e4d48b558bf785b9c46f995c88c
-<br />40823115 << <a href='40823115.html'>Previous</a> </div>
+<p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; 1d16274daafc2e4d48b558bf785b9c46f995c88c</p><br />40823115 << <a href='40823115.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
