--- a/content/40823139.html
+++ b/content/40823139.html
@@ -2,7 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,14 +134,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w11 << <a href='w11.html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>task3-1</h1>
-<p><span>每週各組按照組員順序, 於每堂課程時段, 輪流由 2-3 名學員啟動 OBS + Youtube 直播</span></p>
-<p><span>第一次 直播抽到組員 40823111 40823120</span></p>
-<p><span>1.介紹CoppliaSim 的使用方法</span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/BaqrJgY4yKA" title="YouTube video player" width="560"></iframe></p>
-<p>2.介紹reveal的創見與撰寫網誌內容</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/pPfVa89UqMA" title="YouTube video player" width="560"></iframe></p>
-<br />w11 << <a href='w11.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
+    <div id="tipue_search_content">40823140 << <a href='40823140.html'>Previous</a> <a href='40823111.html'>Next</a> >> 40823111<br /><h1>40823139</h1>
+<p>模型簡化</p>
+<p>coppeliasim的模型並不是我們在繪圖軟體畫得那樣平順，因為導入模型時軟體會將物件做分割，以便進行力學計算，而下列影片將講述有關於為什麼要進行模型簡化的初步概念，內容可能非百分百正確的概念，請諒解</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/H7Ko2wIVNDo" width="560"></iframe></p>
+<br />40823140 << <a href='40823140.html'>Previous</a> <a href='40823111.html'>Next</a> >> 40823111</div>
         
     <!-- footer -->
       <div class="container">
