--- a/content/40823140.html
+++ b/content/40823140.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='Stage1,2.html'>Stage1,2</a><ul class='dropdown'><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage2.html'>stage2</a></li></li></ul></ul><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a><li><a href='task3.html'>task3</a></li></ul><li class='has-children'><a href='w11.html'>w11</a><ul class='dropdown'><li><a href='task3-1.html'>task3-1</a></li></ul><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a><li><a href='w16.html'>w16</a><li><a href='w18.html'>w18</a></li></ul><li class='has-children'><a href='FINAL.html'>FINAL</a><ul class='dropdown'><li><a href='40823124.html'>40823124</a><li><a href='40823128.html'>40823128</a><li><a href='40823120.html'>40823120</a><li><a href='40823115.html'>40823115</a><li><a href='40823140.html'>40823140</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='Stage1,2.html'>Stage1,2</a><ul class='dropdown'><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage2.html'>stage2</a></li></li></ul></ul><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a><li><a href='task3.html'>task3</a></li></ul><li class='has-children'><a href='w11.html'>w11</a><ul class='dropdown'><li><a href='task3-1.html'>task3-1</a></li></ul><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a><li><a href='w16.html'>w16</a><li><a href='w18.html'>w18</a></li></ul><li class='has-children'><a href='FINAL.html'>FINAL</a><ul class='dropdown'><li><a href='40823124.html'>40823124</a><li><a href='40823128.html'>40823128</a><li><a href='40823120.html'>40823120</a><li><a href='40823115.html'>40823115</a><li><a href='40823140.html'>40823140</a><li><a href='40823139.html'>40823139</a><li><a href='40823111.html'>40823111</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,7 +134,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">40823115 << <a href='40823115.html'>Previous</a> <br /><h1>40823140</h1>
+    <div id="tipue_search_content">40823115 << <a href='40823115.html'>Previous</a> <a href='40823139.html'>Next</a> >> 40823139<br /><h1>40823140</h1>
 <p>畫圖教學:</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/730XlhwZKY0" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/5_AeUlE9B04" title="YouTube video player" width="560"></iframe></p>
@@ -150,7 +150,8 @@ img.add_border {
 <p>這次的期末考又學到了很多技術，一開始是Onshape畫圖，接下來是CoppeliaSim的很多技巧，</p>
 <p>再來是學習怎麼寫程式，寫程式時要把自己當作機器人，一步驟一步驟寫，接直到成功，再來要</p>
 <p>謝謝組員，在技術上有問題時都能馬上支援，一起討論，並解決問題的時候很棒。</p>
-<p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; 1d16274daafc2e4d48b558bf785b9c46f995c88c</p><br />40823115 << <a href='40823115.html'>Previous</a> </div>
+<p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; 1d16274daafc2e4d48b558bf785b9c46f995c88c</p>
+<br />40823115 << <a href='40823115.html'>Previous</a> <a href='40823139.html'>Next</a> >> 40823139</div>
         
     <!-- footer -->
       <div class="container">
