--- a/config/content.htm
+++ b/config/content.htm
@@ -379,6 +379,15 @@ end
 <p>模型簡化</p>
 <p>coppeliasim的模型並不是我們在繪圖軟體畫得那樣平順，因為導入模型時軟體會將物件做分割，以便進行力學計算，而下列影片將講述有關於為什麼要進行模型簡化的初步概念，內容可能非百分百正確的概念，請諒解</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/H7Ko2wIVNDo" width="560"></iframe></p>
+<p>task2</p>
+<p>將stage-1與stage-2用python remote api 操控</p>
+<p></p>
+<p>以下為成品，改善方面為接球手臂，擊球手臂只有remote api版本有些微調整，所以會跳出參數提醒(因為擊球手臂的速度跟加速度參數過於誇張，所以會導致結果不穩定，誤差值放大!)</p>
+<p>(1)此版本是remote api版本，利用IK概念，控制末端座標達成</p>
+<p><a href="https://drive.google.com/drive/folders/1jf143S6Ug-NydPkbdXxO_7bxchTvbHmB?usp=sharing">google drive </a></p>
+<p></p>
+<p>(2)此版本是lua版本，同樣利用IK概念，但是是建立在三軸上做末端dummy移動</p>
+<p><a href="https://drive.google.com/drive/folders/1lquV4GU62pKSobDSgHw8QtI-Qqtev0JJ?usp=sharing">google dirve </a></p>
 <h2>40823111</h2>
 <p></p>
 <p>stage3-ag5 資料統整</p>
